:bug: fix z-index for Safari

--- a/front/styles/layout/search.css
+++ b/front/styles/layout/search.css
@@ -19,7 +19,7 @@
     position: absolute;
     left: 0;
     top: calc(1.2rem + 8px);
-    z-index: 100;
+    z-index: 10000;
     background: white;
     width: var(--search-width);
     height: 200px;
